Added custom static model and animated model

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
                 <a href="custom_marker.html">Custom marker</a>
             </li>
             <li>
-                <a href="custom_model.html">Custom marker with custom AR object (incomplete)</a>
+                <a href="custom_model.html">Custom AR model (Naruto)</a>
+            </li>
+            <li>
+                <a href="custom_model_animated.html">Custom animated AR model (running Naruto) </a>
             </li>
             <li>
                 <a href="location-based.html">Location-based AR (incomplete)</a>
