--- a/custom_model_animated.html
+++ b/custom_model_animated.html
@@ -5,7 +5,8 @@ More info: https://aframe.io/docs/1.3.0/introduction/hosting-and-publishing.html
 -->
 
 <!--
-Model takes some time to load (due to size of files when downloading first time?)
+Model takes some time to load 
+Can compress model size, see https://aframe.io/docs/1.3.0/components/gltf-model.html#using-compression 
 Model sources: 
 https://sketchfab.com/3d-models/naruto-uzumaki-running-animation-e18903ef372b4be6b4d1935815f21a6f
 -->
@@ -16,21 +17,26 @@ https://sketchfab.com/3d-models/naruto-uzumaki-running-animation-e18903ef372b4be
     <head>
         <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
+        <!-- Need to include extra library for animating model -->
+        <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
     </head>
 
     <body style='margin : 0px; overflow: scroll;'>
       <a-scene embedded arjs='sourceType: webcam;'> 
+        <!-- Load asset (model) -->
+        <a-assets>
+            <a-asset-item id="naruto" src="https://cdn.jsdelivr.net/gh/alvcwy/ar-js@latest/static/naruto_run/scene.gltf"></a-asset-item>
+          </a-assets>
+
         <a-marker type='pattern' url='static/pattern-images.patt'> 
-            <!-- 
-            Cannot serve model locally, must host on CDN/Github
-            https://aframe.io/docs/1.3.0/introduction/hosting-and-publishing.html#content-delivery-network-cdn 
-            Same as <a-gltf-model src="https://raw.githubusercontent.com/alvcwy/ar-js/main/static/naruto_run/scene.gltf" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
-            -->
-            <a-gltf-model src="https://cdn.jsdelivr.net/gh/alvcwy/ar-js@latest/static/naruto_run/scene.gltf" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
+            <!-- https://aframe.io/docs/1.3.0/components/gltf-model.html -->
+            <!-- Place loaded model on marker -->
+            <!-- Add "animation-mixer" to indicate model should be animated -->
+            <a-entity gltf-model="#naruto" scale="0.5 0.5 0.5" position="0 0 0" animation-mixer></a-entity>
         </a-marker> 
             <!-- add a simple camera --> 
         <a-entity camera></a-entity> 
     </a-scene>
 
 </html>
-
