--- a/location_based.html
+++ b/location_based.html
@@ -11,7 +11,7 @@
       <a-scene embedded arjs='sourceType: webcam;'> 
         <!-- handle marker with your own pattern --> 
         <a-marker type='pattern' url='static/pattern-images.patt'> 
-            <a-box position='0 0.5 0' material='opacity: 0.5; color: blue;'></a-box>
+            <a-image src="static/booji.jpeg" position="0 0 0" rotation="90 180 0 "> -->
         </a-marker> 
             <!-- add a simple camera --> 
         <a-entity camera></a-entity> 
