Added location-based AR, updated titles

--- a/custom_model.html
+++ b/custom_model.html
@@ -14,6 +14,7 @@ https://sketchfab.com/3d-models/naruto-uzumaki-running-animation-e18903ef372b4be
 <!doctype HTML>
 <html>
     <head>
+        <title>Custom model</title>
         <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     </head>
