--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!doctype HTML>
 <html>
     <head>
+        <title>AR.js demo</title>
     </head>
 
     <body>
         <h2>AR.js examples</h2>
         <ul>
             <li>
-                <a href="default_marker.html">Default (Hiro) marker</a>
+                <a href="default_marker.html">Default (Hiro) marker with box displayed</a>
             </li>
             <li>
-                <a href="custom_marker.html">Custom marker</a>
+                <a href="custom_marker.html">Custom marker with image displayed</a>
             </li>
             <li>
-                <a href="custom_model.html">Custom AR model (Naruto)</a>
+                <a href="custom_model.html">Custom AR model (needs time to load)</a>
             </li>
             <li>
-                <a href="custom_model_animated.html">Custom animated AR model (running Naruto) </a>
+                <a href="custom_model_animated.html">Custom animated AR model (needs time to load)</a>
             </li>
             <li>
-                <a href="location-based.html">Location-based AR (incomplete)</a>
+                <a href="location_based.html">Location-based AR (uses current user location for now)</a>
             </li>
         </ul>
 
@@ -36,6 +37,9 @@
                 </a>
             </li>
         </ul>
+
+        <img src="static/pattern-images.png" alt="Custom marker" style="width: 30%; height: auto;">
+        <img src="static/hiro.png" alt="Default marker" style="width: 30%; height: auto;">
 
     </body>
 
