--- a/custom_marker.html
+++ b/custom_marker.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <html>
     <head>
+        <title>Custom marker</title>
         <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     </head>
@@ -9,8 +10,7 @@
       <a-scene embedded arjs='sourceType: webcam;'> 
         <!-- handle marker with your own pattern --> 
         <a-marker type='pattern' url='static/pattern-images.patt'> 
-            <!-- <a-image src="test.png" position="0 0 0" rotation="90 180 0 "> -->
-            <a-box position='0 0.5 0' material='opacity: 0.5; color: blue;'></a-box>
+            <a-image src="static/booji.jpeg" position="0 0 0" rotation="90 180 0" opacity="0.7"></a-image>
         </a-marker> 
             <!-- add a simple camera --> 
         <a-entity camera></a-entity> 
