--- a/default_marker.html
+++ b/default_marker.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <html>
     <head>
+        <title>Default marker</title>
         <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     </head>
