--- a/location_based.html
+++ b/location_based.html
@@ -1,21 +1,51 @@
-<!-- incomplete -->
+<!-- Code from https://github.com/inspiredlabs/ar.js/-->
 
-<!doctype HTML>
+<!doctype html>
 <html>
+
     <head>
+        <title>Location-based AR</title>
+        <link rel="canonical" href="https://inspiredlabs.github.io/ar.js/markerless.html" />
         <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+        <script>
+            // Get current GPS coordinates, use that to place AR object
+            const log = console.log;
+            window.onload = () => {
+            let scene = document.querySelector('a-scene'); /* Apply to whole scene */
+
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function (position) {
+                let gps = document.createAttribute('gps-entity-place'),
+                    arjs = document.createAttribute('arjs'),
+                    welcome = document.getElementById('welcome');
+
+                arjs.value = 'sourceType: webcam; sourceWidth: 1280; sourceHeight: 960; trackingMethod: best; debugUIEnabled: false;';
+                // Can set fixed GPS coordinates here instead
+                gps.value = `latitude: ${position.coords.latitude - 0.001}; longitude: ${position.coords.longitude + 0.001}`;
+                log(gps.value);
+                scene.setAttributeNode(gps); /* Apply to whole scene */
+                scene.setAttributeNode(arjs);
+                });
+            }
+            };
+        </script>
     </head>
+    <body>
+        <a-scene vr-mode-ui="enabled: false">
+            <a-entity id="wrapper" position="0 -8 0">
 
-    <body style='margin : 0px; overflow: scroll;'>
-      <a-scene embedded arjs='sourceType: webcam;'> 
-        <!-- handle marker with your own pattern --> 
-        <a-marker type='pattern' url='static/pattern-images.patt'> 
-            <a-image src="static/booji.jpeg" position="0 0 0" rotation="90 180 0 "> -->
-        </a-marker> 
-            <!-- add a simple camera --> 
-        <a-entity camera></a-entity> 
-    </a-scene>
+                <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
+                <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+                <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
+                <a-plane position="0 0 -5.0" rotation="-90 0 0" width="7" height="7" color="#7BC8A4" shadow></a-plane>
 
+                <a-text id="welcome" value="Welcome" scale="75 75 75" color="#000000" position="-30 0 -150"></a-text>
+                <!-- look-at="[gps-camera]" -->
+
+            </a-entity><!-- /wrapper -->
+
+            <a-camera camera="fov: 60;" gps-camera rotation-reader></a-camera>
+        </a-scene>
+    </body>
 </html>
-
