Added Dragonite model

--- a/location_based.html
+++ b/location_based.html
@@ -19,6 +19,7 @@
                 let gps = document.createAttribute('gps-entity-place'),
                     arjs = document.createAttribute('arjs'),
                     welcome = document.getElementById('welcome');
+                    face = document.getElementById('face');
 
                 arjs.value = 'sourceType: webcam; sourceWidth: 1280; sourceHeight: 960; trackingMethod: best; debugUIEnabled: false;';
                 // Can set fixed GPS coordinates here instead
