Updated Magnemite model size

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <a href="custom_marker.html">Custom marker with image displayed</a>
             </li>
             <li>
-                <a href="custom_model.html">Custom AR model (needs time to load, laggy)</a>
+                <a href="custom_model.html">Custom AR model</a>
             </li>
             <li>
-                <a href="custom_model_animated.html">Custom animated AR model (needs time to load, laggy)</a>
+                <a href="custom_model_animated.html">Custom animated AR model (large model size --> needs time to load, laggy)</a>
             </li>
             <li>
                 <a href="location_based.html">Location-based AR (uses current user location for now)</a>
