--- a/custom_model.html
+++ b/custom_model.html
@@ -27,7 +27,15 @@ https://sketchfab.com/3d-models/naruto-uzumaki-running-animation-e18903ef372b4be
             https://aframe.io/docs/1.3.0/introduction/hosting-and-publishing.html#content-delivery-network-cdn 
             Same as <a-gltf-model src="https://raw.githubusercontent.com/alvcwy/ar-js/main/static/naruto_run/scene.gltf" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
             -->
-            <a-gltf-model src="https://cdn.jsdelivr.net/gh/alvcwy/ar-js@latest/static/magnemite/scene.gltf" scale="0.5 0.5 0.5" position="0 0 0"></a-gltf-model>
+            <a-gltf-model src="https://cdn.jsdelivr.net/gh/alvcwy/ar-js@latest/static/magnemite/scene.gltf" scale="0.2 0.2 0.2" position="0 0 0"></a-gltf-model>
+
+            <!--
+                TODO
+                - Fix scaling and size of model (too large)
+                - Fix position of model (rotate it so it is facing up)
+                - Test on mobile
+            -->
+
         </a-marker> 
             <!-- add a simple camera --> 
         <a-entity camera></a-entity> 
