--- a/location_based.html
+++ b/location_based.html
@@ -41,10 +41,13 @@
                 <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
                 <a-plane position="0 0 -5.0" rotation="-90 0 0" width="7" height="7" color="#7BC8A4" shadow></a-plane>
 
-                <a-gltf-model src="https://cdn.jsdelivr.net/gh/alvcwy/ar-js@latest/static/articuno/scene.gltf" scale="0.2 0.2 0.2" position="0 90 0"></a-gltf-model>
+                <a-gltf-model src="https://cdn.jsdelivr.net/gh/alvcwy/ar-js@latest/static/articuno/scene.gltf" scale="0.2 0.2 0.2" position="0 0 0"></a-gltf-model>
 
                 <a-text id="welcome" value="Welcome" scale="75 75 75" color="#000000" position="-30 0 -150"></a-text>
                 <!-- look-at="[gps-camera]" -->
+                <a-text value="This content will always face you." look-at="[gps-camera]" scale="50 50 50"></a-text>
+            
+                <a-camera gps-camera rotation-reader> </a-camera>
 
             </a-entity><!-- /wrapper -->
 
