--- a/location_based.html
+++ b/location_based.html
@@ -1,4 +1,4 @@
-<!-- Code from https://github.com/inspiredlabs/ar.js/-->
+<!-- Code from https://github.com/inspiredlabs/ar.js/ -->
 
 <!doctype html>
 <html>
@@ -8,6 +8,10 @@
         <link rel="canonical" href="https://inspiredlabs.github.io/ar.js/markerless.html" />
         <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+
+        <!-- For text to stay on screen -->
+        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+
         <script>
             // Get current GPS coordinates, use that to place AR object
             const log = console.log;
@@ -18,8 +22,8 @@
                 navigator.geolocation.getCurrentPosition(function (position) {
                 let gps = document.createAttribute('gps-entity-place'),
                     arjs = document.createAttribute('arjs'),
-                    welcome = document.getElementById('welcome');
-                    face = document.getElementById('face');
+                    welcome = document.getElementById('welcome'); //is this even used????
+                    // face = document.getElementById('face');
 
                 arjs.value = 'sourceType: webcam; sourceWidth: 1280; sourceHeight: 960; trackingMethod: best; debugUIEnabled: false;';
                 // Can set fixed GPS coordinates here instead
@@ -31,28 +35,34 @@
             }
             };
         </script>
+
     </head>
     <body>
         <a-scene vr-mode-ui="enabled: false">
             <a-entity id="wrapper" position="0 -8 0">
 
+                <!--
                 <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
                 <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
                 <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
                 <a-plane position="0 0 -5.0" rotation="-90 0 0" width="7" height="7" color="#7BC8A4" shadow></a-plane>
-
+                -->
                 <a-gltf-model src="https://cdn.jsdelivr.net/gh/alvcwy/ar-js@latest/static/articuno/scene.gltf" scale="0.2 0.2 0.2" position="40 0 -40"></a-gltf-model>
 
                 <a-text id="welcome" value="Welcome" scale="75 75 75" color="#000000" position="-30 0 -150"></a-text>
+
                 <!-- look-at="[gps-camera]" -->
-                <a-camera gps-camera rotation-reader> </a-camera>
-
+                <!--
+                <a-camera gps-camera rotation-reader> 
+                    <a-text id="face" value="This text always faces camera" look-at="[gps-camera]" color="#000000" scale="1 1 1" ></a-text>
+                </a-camera>
+                -->
             </a-entity><!-- /wrapper -->
-
+            
             <a-camera camera="fov: 60;" gps-camera rotation-reader>
-                <!-- Fix text on screen, doesn't work if I put text in a-scene-->
-                <a-text id="face" value="Test" look-at="[gps-camera]" scale="50 50 50" position="0 0 20"></a-text>
+                <a-text value="Fixed text" scale="75 75 75" color="#000000" position="-30 0 -150" look-at="[gps-camera]"></a-text>
             </a-camera>
+            
         </a-scene>
     </body>
 </html>
